Fix search icon on mobile

--- a/src/app/header/styles/_header.scss
+++ b/src/app/header/styles/_header.scss
@@ -58,7 +58,7 @@
     @media (min-width: 768px) {
         display: none;
     }
-    img {
+    img, svg {
         max-height: 100%;
         width: auto;
     }
